# sandbox

./: .gitignore  jacobian_learning.ipynb  local_predictability.ipynb  main.py  main_lyapunov.py  main_lyapunov_cond.py  main_neighborhood.py  main_normal.py  model_evaluation.ipynb  neuralode_lyapunov.ipynb  neuralode_sensitivity.ipynb  prototype.ipynb  prototype_async_save.ipynb  prototype_orig.ipynb  pyproject.toml
configs/: config.yaml  config_neighborhood.yaml
configs/checkpointing/: defaults.yaml
configs/data/: lorenz63.yaml
configs/model/: neighborhood_flow.yaml  neuralode.yaml
configs/preprocessing/: base.yaml  defaults.yaml  neighborhood.yaml
configs/training/: base.yaml  defaults.yaml  jacobian_matching.yaml  neighborhood.yaml  vanilla.yaml
data/: lorenz63.hdf5  lorenz63_new.hdf5  lorenz63_new_test.hdf5
notebooks/: lorenz63.ipynb
notebooks/analysis/: dyslim.ipynb  fractal_dimension.ipynb  jacobian_vs_accuracy.ipynb  neighborhood.ipynb  normal_vectors.ipynb  pca_denoising.ipynb  tangent_evolution.ipynb
notebooks/datasets/: datasets.ipynb  hyperchen05.ipynb  lorenz63.ipynb  lorenz96.ipynb  neighborhood.ipynb  rossler76.ipynb  rossler79.ipynb
notebooks/evaluation/: fixed_vs_adaptive.ipynb  hyperchen05_eval.ipynb  long_term.ipynb  lorenz63_eval.ipynb  lorenz96_eval.ipynb  lyapunov_exponents.ipynb  metrics.ipynb  model_comparison.ipynb  rossler76_eval.ipynb  sinkhorn.ipynb  valid_prediction_time.ipynb  varying_dt.ipynb  varying_training_lengths.ipynb
notebooks/isochrons/: fitzhugh_nagumo.ipynb
scripts/: analysis_lyapunov.py  analysis_sinkhorn.py  main_normal.py  train_dyslim.py  train_jacobian.py  train_neighborhood.py  train_normal.py  train_pca.py  train_proxy_tangent_evolution.py  train_tangent_evolution.py  train_vanilla.py
scripts/configs/: config.yaml  config_dyslim.yaml  config_jacobian.yaml  config_neighborhood.yaml
scripts/configs/data/: base.yaml  hyperchen05.yaml  lorenz63_dyslim.yaml  lorenz63_park.yaml  lorenz96.yaml  rossler76.yaml
scripts/configs/data/dataset/: lorenz63.yaml  lorenz63_large.yaml  lorenz96.yaml
scripts/configs/model/: base.yaml  latent_lstm.yaml  latent_rnn.yaml  neuralode.yaml  neuralode_fixed.yaml
scripts/configs/training/: base.yaml  multiterm.yaml  vanilla.yaml
scripts/configs/wandb/: defaults.yaml
scripts/configs_analysis/: config_lyapunov.yaml  config_sinkhorn.yaml
scripts/configs_analysis/data/: hyperchen05.yaml  lorenz63.yaml  rossler76.yaml
