[project]
name = "sandbox"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "diffrax>=0.6.2",
    "dysts>=0.95",
    "equinox>=0.11.12",
    "ipykernel>=6.29.5",
    "jax[cuda12]>=0.5.2",
    "lyapunov",
    "matplotlib>=3.10.1",
    "numba>=0.61.0",
    "numpy>=2.1.0",
]

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
lyapunov = { workspace = true }
