[project]
name = "sandbox"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "colorcet>=3.1.0",
    "diffrax>=0.6.2",
    "dynamical-systems",
    "dysts>=0.95",
    "equinox>=0.11.12",
    "h5py>=3.13.0",
    "hydra-core>=1.3.2",
    "hydra-submitit-launcher>=1.2.0",
    "ipykernel>=6.29.5",
    "jax[cuda12]>=0.5.2",
    "lineax>=0.0.7",
    "lyapunov",
    "matplotlib>=3.10.1",
    "matplotlib-utils",
    "numba>=0.61.0",
    "numpy>=2.1.0",
    "omegaconf>=2.3.0",
    "optax>=0.2.4",
    "wandb>=0.19.8",
]

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
lyapunov = { workspace = true }
matplotlib-utils = { workspace = true }
dynamical-systems = { workspace = true }
dynamics-discovery = { workspace = true }

[tool.ruff]
extend-include = ["*.ipynb"]
src = []
fix = true

[tool.ruff.lint]
fixable = ["I001", "F401"]
ignore = ["E402", "E721", "E731", "E741", "F722"]
select = ["E", "F", "I001"]

[tool.ruff.lint.isort]
combine-as-imports = true
lines-after-imports = 2
order-by-type = false
